node-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service  
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
